--- a/outils/convertisseur/index.html
+++ b/outils/convertisseur/index.html
@@ -1,1 +1,18 @@
-<!doctype html><meta charset='utf-8'><link rel='stylesheet' href='../../assets/style.css'><div class='wrapper'><h1>Convertisseur</h1><p>À venir.</p></div>
+<!doctype html><html lang="fr"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Convertisseur</title><link rel="stylesheet" href="../../assets/style.css"/></head>
+<body>
+<header><div class="wrapper"><nav class="nav">
+  <a class="brand" href="../../">Maths</a>
+  <a href="../../outils/">Outils</a>
+  <a href="../../6e/">6e</a>
+  <a href="../../5e/">5e</a>
+  <a href="../../4e/">4e</a>
+  <a href="../../3e/">3e</a>
+  <a href="../../clubmat/">Clubmat</a>
+</nav></div></header>
+
+<main><div class="wrapper">
+  <div class="card"><h1>Convertisseur</h1><p>À venir.</p></div>
+</div></main>
+<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
