--- a/outils/index.html
+++ b/outils/index.html
@@ -1,1 +1,51 @@
-<!doctype html><html lang='fr'><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/><title>Outils</title><link rel='stylesheet' href='../assets/style.css'/></head><body><header><div class='wrapper'><nav class='nav'><a class='brand' href='../'>📐 Maths</a><span>Outils</span></nav></div></header><main><div class='wrapper'><h1>Outils</h1><section class='grid grid-3'><article class='card'><h3>Glisse-nombre</h3><p class='badge'>×/÷ 10 · 100 · 1000</p><p><a class='btn' href='glisse-nombre.html'>Ouvrir</a></p></article><article class='card'><h3>Boulier</h3><p class='badge'>Dépose tes fichiers Soroban ici</p><p><a class='btn' href='boulier/'>Ouvrir</a></p></article><article class='card'><h3>Convertisseur</h3><p class='badge'>Unité → Unité (à venir)</p><p><a class='btn' href='convertisseur/'>Ouvrir</a></p></article></section></div></main><footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Outils</title>
+  <link rel="stylesheet" href="../assets/style.css"/>
+</head>
+<body>
+  <!-- navbar cohérente -->
+  <header><div class="wrapper"><nav class="nav">
+    <a class="brand" href="../">Maths</a>
+    <a href="../outils/">Outils</a>
+    <a href="../6e/">6e</a>
+    <a href="../5e/">5e</a>
+    <a href="../4e/">4e</a>
+    <a href="../3e/">3e</a>
+    <a href="../clubmat/">Clubmat</a>
+  </nav></div></header>
+
+  <main><div class="wrapper">
+    <div class="card">
+      <h1>Outils</h1>
+      <p class="small">Outils interactifs pour s’entraîner. Clique pour ouvrir.</p>
+    </div>
+
+    <!-- cartes jolies, même style que l’accueil -->
+    <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px;margin-top:18px">
+      <div class="card">
+        <h3>Glisse-nombre</h3>
+        <p class="small">× / ÷ 10 · 100 · 1000</p>
+        <p><a class="btn-chip" href="glisse-nombre.html">Ouvrir</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Boulier</h3>
+        <p class="small">Soroban / manipulations</p>
+        <p><a class="btn-chip" href="boulier/">Ouvrir</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Convertisseur</h3>
+        <p class="small">Unités (à venir)</p>
+        <p><a class="btn-chip" href="convertisseur/">Ouvrir</a></p>
+      </div>
+    </div>
+  </div></main>
+
+  <footer><div class="wrapper">© 2025 — Site pédagogique</div></footer>
+</body>
+</html>
