--- a/index.html
+++ b/index.html
@@ -1,45 +1,20 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Accueil</title>
-  <link rel="stylesheet" href="assets/style.css"/>
-  <style>
-    /* Ajustement pour centrer le bouton dans le cadre */
-    .aside-centered {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-    }
-  </style>
-</head>
+<!doctype html><html lang="fr"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Accueil</title><link rel="stylesheet" href="assets/style.css"/></head>
 <body>
-<header>
-  <div class="wrapper">
-    <nav class="nav">
-      <a class="brand" href="./">Maths</a>
-      <a href="outils/">Outils</a>
-    </nav>
-  </div>
-</header>
+<header><div class="wrapper"><nav class="nav">
+  <a class="brand" href="./">Maths</a>
+  <a href="outils/">Outils</a>
+</nav></div></header>
 
-<main>
-  <div class="wrapper grid layout">
-    <section class="card">
-      <h1>Bienvenue <span aria-hidden="true">👋</span></h1>
-      <p>Outils interactifs et documents pour le collège (à venir)</p>
-    </section>
-
-    <aside class="card aside-centered">
-      <a class="btn-chip" href="outils/">🔧&nbsp;&nbsp;Outils</a>
-    </aside>
-  </div>
-</main>
-
-<footer>
-  <div class='wrapper'>© 2025 — Site pédagogique — Bourgault Gwenaël</div>
-</footer>
-</body>
-</html>
+<main><div class="wrapper grid layout">
+  <section class="card">
+    <h1>Bienvenue 👋</h1>
+    <p>Outils interactifs et documents.</p>
+    <p class="small">En construction</p>
+  </section>
+  <aside class="card" style="display:flex;align-items:center;justify-content:center">
+    <a class="btn-chip" href="outils/">🔧&nbsp;&nbsp;Outils</a>
+  </aside>
+</div></main>
+<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
