--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -1,19 +1,19 @@
 <!doctype html><html lang="fr"><head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Outils</title><link rel="stylesheet" href="../assets/style.css"/></head>
+<title>Bouliers</title><link rel="stylesheet" href="../../assets/style.css"/></head>
 <body>
 <header><div class="wrapper"><nav class="nav">
-  <a class="brand" href="../">Maths</a>
-  <a href="./">Outils</a>
+  <a class="brand" href="../../">Maths</a>
+  <a href="../">Outils</a>
 </nav></div></header>
 
 <main><div class="wrapper">
   <section class="card center-card">
-    <h1>Outils 🔧</h1>
+    <h1>Bouliers 🧮</h1>
     <div class="btn-row">
-      <a class="btn-chip" href="glisse-nombre.html">Glisse-nombre</a>
-      <a class="btn-chip" href="conversions.html">Conversions</a>
-      <a class="btn-chip" href="bouliers/">Bouliers</a>
+      <a class="btn-chip" href="boulier-cycle-2/">Boulier cycle 2</a>
+      <a class="btn-chip" href="boulier-cycle-3/">Boulier cycle 3</a>
+      <a class="btn-chip" href="soroban/">Soroban</a>
     </div>
   </section>
 </div></main>
