--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Accueil</title><link rel="stylesheet" href="assets/style.css"/></head>
 <body>
+
 <header><div class="wrapper"><nav class="nav">
-  <a class="brand" href="./">Maths</a>
+  <a class="brand" href="">Maths</a>
   <a href="outils/">Outils</a>
 </nav></div></header>
 
-<main><div class="wrapper grid layout">
-  <section class="card">
-    <h1>Bienvenue 👋</h1>
-    <p>Outils interactifs et documents.</p>
-    <p class="small">En construction</p>
+<main><div class="wrapper">
+
+<div class="grid layout">
+  <section class="card center">
+    <h1 class="big">Bienvenue 👋</h1>
+    <p>Outils interactifs et documents pour tes entraînements à la maison.</p>
+    <p class="small">Tout est pensé pour aller vite sur mobile.</p>
   </section>
   <aside class="card" style="display:flex;align-items:center;justify-content:center">
     <a class="btn-chip" href="outils/">🔧&nbsp;&nbsp;Outils</a>
   </aside>
+</div>
+
 </div></main>
-<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
+<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer>
+</body></html>
