--- a/outils/bouliers/soroban/index.html
+++ b/outils/bouliers/soroban/index.html
@@ -2,18 +2,25 @@
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Soroban</title><link rel="stylesheet" href="../../../assets/style.css"/></head>
 <body>
+
 <header><div class="wrapper"><nav class="nav">
   <a class="brand" href="../../../">Maths</a>
   <a href="../../../outils/">Outils</a>
 </nav></div></header>
 
 <main><div class="wrapper">
-  <section class="card center-card">
-    <h1>Soroban</h1>
-    <div class="btn-row">
-      <a class="btn-chip" href="soroban.html">Soroban</a>
-      <a class="btn-chip" href="soroban-placement-nombres.html">Placement des nombres</a>
-    </div>
-  </section>
+
+<section class="grid" style="grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
+  <div class="card center">
+    <h3>Soroban</h3>
+    <p><a class="btn-chip" href="soroban.html">Ouvrir</a></p>
+  </div>
+  <div class="card center">
+    <h3>Placement des nombres</h3>
+    <p><a class="btn-chip" href="soroban-placement-nombres.html">Ouvrir</a></p>
+  </div>
+</section>
+
 </div></main>
-<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
+<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer>
+</body></html>
