--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -2,19 +2,32 @@
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Bouliers</title><link rel="stylesheet" href="../../assets/style.css"/></head>
 <body>
+
 <header><div class="wrapper"><nav class="nav">
   <a class="brand" href="../../">Maths</a>
-  <a href="../">Outils</a>
+  <a href="../../outils/">Outils</a>
 </nav></div></header>
 
 <main><div class="wrapper">
-  <section class="card center-card">
-    <h1>Bouliers 🧮</h1>
-    <div class="btn-row">
-      <a class="btn-chip" href="boulier-cycle-2/">Boulier cycle 2</a>
-      <a class="btn-chip" href="boulier-cycle-3/">Boulier cycle 3</a>
-      <a class="btn-chip" href="soroban/">Soroban</a>
-    </div>
-  </section>
+
+<section class="grid" style="grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
+  <div class="card center">
+    <h3>Cycle 2</h3>
+    <p class="small">Boulier · Placer des nombres · Add./Soustr.</p>
+    <p><a class="btn-chip" href="boulier-cycle-2/">Ouvrir</a></p>
+  </div>
+  <div class="card center">
+    <h3>Cycle 3</h3>
+    <p class="small">Boulier · Placer des nombres · Add./Soustr.</p>
+    <p><a class="btn-chip" href="boulier-cycle-3/">Ouvrir</a></p>
+  </div>
+  <div class="card center">
+    <h3>Soroban</h3>
+    <p class="small">Outils Soroban</p>
+    <p><a class="btn-chip" href="soroban/">Ouvrir</a></p>
+  </div>
+</section>
+
 </div></main>
-<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
+<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer>
+</body></html>
