--- a/outils/index.html
+++ b/outils/index.html
@@ -2,19 +2,32 @@
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Outils</title><link rel="stylesheet" href="../assets/style.css"/></head>
 <body>
+
 <header><div class="wrapper"><nav class="nav">
   <a class="brand" href="../">Maths</a>
-  <a href="./">Outils</a>
+  <a href="../outils/">Outils</a>
 </nav></div></header>
 
 <main><div class="wrapper">
-  <section class="card center-card">
-    <h1>Outils 🔧</h1>
-    <div class="btn-row">
-      <a class="btn-chip" href="glisse-nombre.html">Glisse-nombre</a>
-      <a class="btn-chip" href="conversions.html">Conversions</a>
-      <a class="btn-chip" href="bouliers/">Bouliers</a>
-    </div>
-  </section>
+
+<section class="grid" style="grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
+  <div class="card center">
+    <h3>Glisse‑nombre</h3>
+    <p class="small">× / ÷ 10 · 100 · 1000</p>
+    <p><a class="btn-chip" href="glisse-nombre.html">Ouvrir</a></p>
+  </div>
+  <div class="card center">
+    <h3>Boulier</h3>
+    <p class="small">Cycle 2 · Cycle 3 · Soroban</p>
+    <p><a class="btn-chip" href="bouliers/">Ouvrir</a></p>
+  </div>
+  <div class="card center">
+    <h3>Convertisseur</h3>
+    <p class="small">Unités (volumes, etc.)</p>
+    <p><a class="btn-chip" href="conversions.html">Ouvrir</a></p>
+  </div>
+</section>
+
 </div></main>
-<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer></body></html>
+<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer>
+</body></html>
