--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="grid layout">
   <section class="card center">
     <h1 class="big">Bienvenue 👋</h1>
-    <p>Outils interactifs et documents pour tes entraînements à la maison.</p>
+    <p>Outils interactifs et documents pour tes entraînements à la maison. Non adapté au portable pour le moment.</p>
   </section>
   <aside class="card" style="display:flex;align-items:center;justify-content:center">
     <a class="btn-chip" href="outils/">🔧&nbsp;&nbsp;Outils</a>
@@ -21,5 +21,5 @@
 </div>
 
 </div></main>
-<footer><div class='wrapper'>© 2025 — Site pédagogique</div></footer>
+<footer><div class='wrapper'>© 2025 — Site pédagogique - Bourgault Gwenaël</div></footer>
 </body></html>
