--- a/outils/glisse-nombre-portable.html
+++ b/outils/glisse-nombre-portable.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Glisse nombre</title>
   <style>
     :root{
@@ -20,6 +20,8 @@
       display:flex; justify-content:center;
       padding: clamp(10px, 3vw, 28px);
       -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+      padding-left: max(10px, env(safe-area-inset-left));
+      padding-right: max(10px, env(safe-area-inset-right));
     }
 
     .app{
@@ -35,11 +37,10 @@
     h1{margin:0 0 8px; font-size:clamp(18px, 2.6vw, 26px); font-weight:800; letter-spacing:.2px}
 
     .controls{
-      position:relative; z-index:2;  /* garantit les clics au-dessus de tout */
+      position:relative; z-index:2;
       display:flex; flex-wrap:wrap; gap:8px; align-items:center
     }
 
-    /* Boutons classiques, sobres */
     .btn{
       border:1.5px solid #444;
       background:#f2f2f2;
@@ -51,7 +52,6 @@
     }
     .btn.primary{background:#2563eb; color:#fff; border-color:#2563eb}
 
-    /* Segments “Zéros” (retour au style fiable et cliquable) */
     .seg{
       display:flex; border:1.5px solid #444; border-radius:12px; overflow:hidden
     }
@@ -62,13 +62,13 @@
     .seg button+button{border-left:1.5px solid #444}
     .seg .active{background:#0ea5e9; color:#fff}
 
-    /* Grille */
     .grid{
       display:grid;
       grid-template-columns:repeat(12,var(--cell));
       gap:var(--gap);
       justify-content:center;
-      margin-top:12px
+      margin-top:12px;
+      min-width: calc(12*var(--cell) + 11*var(--gap));
     }
     .head{
       height:var(--headH); text-align:center; font-weight:800; background:#ececec;
@@ -105,11 +105,17 @@
 
     #status{margin-top:8px; font-weight:800; font-size:clamp(14px, 2.2vw, 18px)}
 
-    /* Anti-autofill */
     input.digit:-webkit-autofill{
       -webkit-box-shadow: 0 0 0 1000px #fff inset !important;
       -webkit-text-fill-color: inherit !important;
       caret-color:#2563eb;
+    }
+
+    @media (orientation: landscape) and (max-width: 900px){
+      :root{
+        --gap: 6px;
+        --cell: clamp(30px, calc((100vw - 20px - 11*var(--gap)) / 12), 72px);
+      }
     }
 
     @media (max-width:420px){
@@ -131,7 +137,7 @@
           <button data-mode="needed" type="button">Zéros : Nécessaires</button>
           <button data-mode="all" type="button">Zéros : Partout</button>
         </div>
-        <button class="btn" id="exitZerosBtn" type="button" title="Gestion des sorties">Gestion de la sortie</button>
+        <button class="btn" id="exitZerosBtn" type="button">Gestion de la sortie</button>
       </div>
 
       <section class="card" style="z-index:1;">
@@ -242,84 +248,4 @@
         if(rightStack.length){ next[last]=rightStack.pop(); }
       } else {
         exp10--;
-        const lost=prev[last]; if(lost!=='') rightStack.push(lost);
-        for(let k=orderLinear.length-1;k>=0;k--){ const i=orderLinear[k]; const prv=(i-1===COMMA)?UNITS:(i-1); next[i]=(prv>=0)?prev[prv]:''; }
-        if(leftStack.length){ next[first]=leftStack.pop(); }
-      }
-
-      if(overflowSide===null){
-        if(leftStack.length>0 && rightStack.length===0) overflowSide='left';
-        else if(rightStack.length>0 && leftStack.length===0) overflowSide='right';
-      }
-      if(leftStack.length===0 && rightStack.length===0) overflowSide=null;
-
-      writeRaw(next);
-      applyZeroMode();
-      ensureExitZeros();
-      updateStatus();
-    }
-
-    function resetAll(){
-      inputs.forEach(i=>i.value='');
-      clearGhosts();
-      zeroMode='none';
-      zerosSeg.querySelectorAll('button').forEach(x=>x.classList.remove('active'));
-      zerosSeg.querySelector('[data-mode="none"]').classList.add('active');
-      exp10=0; overflowSide=null; leftStack.length=0; rightStack.length=0;
-      updateStatus();
-      inputs[0].focus();
-    }
-
-    function updateStatus(){
-      let label='×1';
-      if(exp10!==0){
-        const n=Math.abs(exp10);
-        if(n<=6){
-          const pow=Math.pow(10,n);
-          label=(exp10>0?'×'+pow:'÷'+pow);
-        } else {
-          label=(exp10>0?'×10^'+n:'÷10^'+n);
-        }
-      }
-      status.textContent=label;
-    }
-
-    inputs.forEach(inp=>{
-      inp.addEventListener('focus', () => { inp.setAttribute('autocomplete','off'); });
-      inp.addEventListener('beforeinput',function(e){
-        if(e.inputType==='insertText' || e.inputType==='insertFromPaste'){
-          var ch=(e.data||'').replace(/[^0-9]/g,''); if(ch==='') e.preventDefault();
-        }
-      });
-      inp.addEventListener('input',function(e){
-        var v=sanitizeToDigit(e.target.value); e.target.value=v;
-        if(v!=='') focusMove(+1);
-        applyZeroMode(); ensureExitZeros();
-      });
-      inp.addEventListener('keydown',function(e){
-        if(e.key==='ArrowLeft'){ e.preventDefault(); focusMove(-1); }
-        if(e.key==='ArrowRight'){ e.preventDefault(); focusMove(+1); }
-        if(e.key==='Backspace' && e.target.value===''){ e.preventDefault(); focusMove(-1); }
-      });
-    });
-
-    zerosSeg.addEventListener('click',function(e){
-      const b=e.target.closest('button'); if(!b) return;
-      zerosSeg.querySelectorAll('button').forEach(x=>x.classList.remove('active'));
-      b.classList.add('active'); zeroMode=b.dataset.mode;
-      applyZeroMode(); ensureExitZeros();
-    });
-    resetBtn.addEventListener('click',resetAll);
-    times10.addEventListener('click',function(){ shift('left'); });
-    div10.addEventListener('click',function(){ shift('right'); });
-    exitZerosBtn.addEventListener('click',function(){
-      exitZeros=!exitZeros;
-      exitZerosBtn.textContent = "Gestion de la sortie";
-      applyZeroMode(); ensureExitZeros();
-    });
-
-    updateStatus();
-    inputs[0].focus();
-  </script>
-</body>
-</html>
+        const lost=prev[last]; if(lost!==
