--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="grid layout">
   <section class="card center">
     <h1 class="big">Bienvenue 👋</h1>
-    <p>Outils interactifs et documents pour tes entraînements à la maison. Non adapté au téléphone pour le moment.</p>
+    <p>Outils interactifs et documents pour tes entraînements à la maison.</p>
   </section>
   <aside class="card" style="display:flex;align-items:center;justify-content:center">
     <a class="btn-chip" href="outils/">🔧&nbsp;&nbsp;Outils</a>
