--- a/outils/glisse-nombre-portable.html
+++ b/outils/glisse-nombre-portable.html
@@ -20,13 +20,15 @@
       display:flex; justify-content:center;
       padding: clamp(10px, 3vw, 28px);
       -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+
+      /* Safe area pour encoche/bords arrondis */
       padding-left: max(10px, env(safe-area-inset-left));
       padding-right: max(10px, env(safe-area-inset-right));
     }
 
     .app{
       width:min(1200px,100%);
-      overflow-x:auto;
+      overflow-x:auto; /* sécurité si ça déborde */
     }
 
     .card{
@@ -37,10 +39,11 @@
     h1{margin:0 0 8px; font-size:clamp(18px, 2.6vw, 26px); font-weight:800; letter-spacing:.2px}
 
     .controls{
-      position:relative; z-index:2;
+      position:relative; z-index:2; /* garantit les clics au-dessus */
       display:flex; flex-wrap:wrap; gap:8px; align-items:center
     }
 
+    /* Boutons */
     .btn{
       border:1.5px solid #444;
       background:#f2f2f2;
@@ -52,9 +55,8 @@
     }
     .btn.primary{background:#2563eb; color:#fff; border-color:#2563eb}
 
-    .seg{
-      display:flex; border:1.5px solid #444; border-radius:12px; overflow:hidden
-    }
+    /* Segments */
+    .seg{display:flex; border:1.5px solid #444; border-radius:12px; overflow:hidden}
     .seg button{
       padding:8px 12px; font-weight:700; border:0; background:#e9e9e9; cursor:pointer;
       font-size:clamp(13px, 2.6vw, 16px);
@@ -62,13 +64,14 @@
     .seg button+button{border-left:1.5px solid #444}
     .seg .active{background:#0ea5e9; color:#fff}
 
+    /* Grille */
     .grid{
       display:grid;
       grid-template-columns:repeat(12,var(--cell));
       gap:var(--gap);
       justify-content:center;
       margin-top:12px;
-      min-width: calc(12*var(--cell) + 11*var(--gap));
+      min-width: calc(12*var(--cell) + 11*var(--gap)); /* sécurité scroll */
     }
     .head{
       height:var(--headH); text-align:center; font-weight:800; background:#ececec;
@@ -111,6 +114,7 @@
       caret-color:#2563eb;
     }
 
+    /* Ajustement paysage mobile */
     @media (orientation: landscape) and (max-width: 900px){
       :root{
         --gap: 6px;
@@ -137,7 +141,7 @@
           <button data-mode="needed" type="button">Zéros : Nécessaires</button>
           <button data-mode="all" type="button">Zéros : Partout</button>
         </div>
-        <button class="btn" id="exitZerosBtn" type="button">Gestion de la sortie</button>
+        <button class="btn" id="exitZerosBtn" type="button" title="Gestion des sorties">Gestion de la sortie</button>
       </div>
 
       <section class="card" style="z-index:1;">
@@ -174,7 +178,7 @@
   </main>
 
   <script>
-    const ids=["c00","c0","c1","c2","c3","c4",null,"c6","c7","c8","c9","c10"];
+    const ids=["c00","c0","c1","c2","c3","c4",null,"c6","c7","c8","c9","c10"]; // 12 colonnes (6 entiers, virgule, 5 décimales)
     const INT=[0,1,2,3,4,5];
     const DEC=[7,8,9,10,11];
     const UNITS=5;
@@ -189,20 +193,20 @@
     const exitZerosBtn=document.getElementById('exitZerosBtn');
     const status=document.getElementById('status');
 
-    let zeroMode='none';
-    let exp10=0;
-    let exitZeros=false;
-    const leftStack=[];
-    const rightStack=[];
-    let overflowSide=null;
+    // État
+    let zeroMode='none'; // 'none' | 'needed' | 'all'
+    let exp10=0;         // cumul ×10/÷10
+    let exitZeros=false; // remplir les trous pendant débordement ?
+    const leftStack=[];  // ce qui sort à gauche (×10)
+    const rightStack=[]; // ce qui sort à droite (÷10)
+    let overflowSide=null; // 'left' | 'right' | null
 
+    // Helpers
     function sanitizeToDigit(v){ const m=(v||'').toString().match(/[0-9]/); return m?m[0]:''; }
     function indexOfInput(el){ return order.findIndex(i=>ids[i]===el.id); }
     function focusMove(delta){
-      const active=document.activeElement;
-      if(!active||!active.classList.contains('digit')) return;
-      let idx=indexOfInput(active);
-      if(idx<0) return;
+      const active=document.activeElement; if(!active||!active.classList.contains('digit')) return;
+      let idx=indexOfInput(active); if(idx<0) return;
       idx=Math.min(order.length-1, Math.max(0, idx+delta));
       inputs[idx].focus(); inputs[idx].select();
     }
@@ -210,6 +214,7 @@
     function writeRaw(arr){ for(const i of order){ document.getElementById(ids[i]).value=arr[i]||''; } }
     function clearGhosts(){ document.querySelectorAll('.cell .ghost').forEach(g=>g.remove()); }
 
+    // Zéros d'affichage
     function applyZeroMode(){
       clearGhosts();
       const raw=readRaw();
@@ -221,19 +226,28 @@
         for(const i of DEC){ if(raw[i]==='') addGhost(i); }
       } else if(zeroMode==='needed'){
         if(hasDec){ for(const i of DEC){ if(raw[i]!=='' ) break; addGhost(i); } }
-        if(hasInt){ let lastInt=-1; for(const i of INT){ if(raw[i]!=='' ) lastInt=i; } for(let i=lastInt+1; i<=UNITS; i++){ addGhost(i); } }
-        else if(hasDec){ addGhost(UNITS); }
+        if(hasInt){
+          let lastInt=-1; for(const i of INT){ if(raw[i]!=='' ) lastInt=i; }
+          for(let i=lastInt+1; i<=UNITS; i++){ addGhost(i); }
+        } else if(hasDec){ addGhost(UNITS); }
       }
     }
 
+    // Zéros pendant débordement (affichage seulement) du côté d'origine
     function ensureExitZeros(){
       if(!exitZeros || !overflowSide) return;
       const raw=readRaw();
-      function addGhost(i){ const cell=document.getElementById(ids[i]).parentElement; if(!cell.querySelector('.ghost')){ const g=document.createElement('div'); g.className='ghost'; g.textContent='0'; cell.appendChild(g);} }
+      function addGhost(i){
+        const cell=document.getElementById(ids[i]).parentElement;
+        if(!cell.querySelector('.ghost')){
+          const g=document.createElement('div'); g.className='ghost'; g.textContent='0'; cell.appendChild(g);
+        }
+      }
       if(overflowSide==='left'){ for(const i of INT){ if(raw[i]==='') addGhost(i); } }
       else if(overflowSide==='right'){ for(const i of DEC){ if(raw[i]==='') addGhost(i); } }
     }
 
+    // Décalages ×10 / ÷10
     function shift(dir){
       const prev=readRaw();
       const next=prev.slice();
@@ -244,8 +258,98 @@
       if(dir==='left'){
         exp10++;
         const lost=prev[first]; if(lost!=='') leftStack.push(lost);
-        for(const i of orderLinear){ const nxt=(i+1===COMMA)?COMMA+1:(i+1); next[i]=(nxt<ids.length)?prev[nxt]:''; }
+        for(const i of orderLinear){
+          const nxt=(i+1===COMMA)?COMMA+1:(i+1);
+          next[i]=(nxt<ids.length)?prev[nxt]:'';
+        }
         if(rightStack.length){ next[last]=rightStack.pop(); }
       } else {
         exp10--;
-        const lost=prev[last]; if(lost!==
+        const lost=prev[last]; if(lost!=='') rightStack.push(lost);
+        for(let k=orderLinear.length-1;k>=0;k--){
+          const i=orderLinear[k];
+          const prv=(i-1===COMMA)?UNITS:(i-1);
+          next[i]=(prv>=0)?prev[prv]:'';
+        }
+        if(leftStack.length){ next[first]=leftStack.pop(); }
+      }
+
+      if(overflowSide===null){
+        if(leftStack.length>0 && rightStack.length===0) overflowSide='left';
+        else if(rightStack.length>0 && leftStack.length===0) overflowSide='right';
+      }
+      if(leftStack.length===0 && rightStack.length===0) overflowSide=null;
+
+      writeRaw(next);
+      applyZeroMode();
+      ensureExitZeros();
+      updateStatus();
+    }
+
+    function resetAll(){
+      inputs.forEach(i=>i.value='');
+      clearGhosts();
+      zeroMode='none';
+      zerosSeg.querySelectorAll('button').forEach(x=>x.classList.remove('active'));
+      zerosSeg.querySelector('[data-mode="none"]').classList.add('active');
+      exp10=0; overflowSide=null; leftStack.length=0; rightStack.length=0;
+      updateStatus();
+      inputs[0].focus();
+    }
+
+    function updateStatus(){
+      let label='×1';
+      if(exp10!==0){
+        const n=Math.abs(exp10);
+        if(n<=6){
+          const pow=Math.pow(10,n);
+          label=(exp10>0?'×'+pow:'÷'+pow);
+        } else {
+          label=(exp10>0?'×10^'+n:'÷10^'+n);
+        }
+      }
+      status.textContent=label;
+    }
+
+    // Saisie stricte 1 chiffre/case + navigation
+    inputs.forEach(inp=>{
+      inp.addEventListener('focus', () => { inp.setAttribute('autocomplete','off'); });
+      inp.addEventListener('beforeinput',function(e){
+        if(e.inputType==='insertText' || e.inputType==='insertFromPaste'){
+          var ch=(e.data||'').replace(/[^0-9]/g,''); if(ch==='') e.preventDefault();
+        }
+      });
+      inp.addEventListener('input',function(e){
+        var v=sanitizeToDigit(e.target.value); e.target.value=v;
+        if(v!=='') focusMove(+1);
+        applyZeroMode(); ensureExitZeros();
+      });
+      inp.addEventListener('keydown',function(e){
+        if(e.key==='ArrowLeft'){ e.preventDefault(); focusMove(-1); }
+        if(e.key==='ArrowRight'){ e.preventDefault(); focusMove(+1); }
+        if(e.key==='Backspace' && e.target.value===''){ e.preventDefault(); focusMove(-1); }
+      });
+    });
+
+    // Boutons
+    zerosSeg.addEventListener('click',function(e){
+      const b=e.target.closest('button'); if(!b) return;
+      zerosSeg.querySelectorAll('button').forEach(x=>x.classList.remove('active'));
+      b.classList.add('active'); zeroMode=b.dataset.mode;
+      applyZeroMode(); ensureExitZeros();
+    });
+    resetBtn.addEventListener('click',resetAll);
+    times10.addEventListener('click',function(){ shift('left'); });
+    div10.addEventListener('click',function(){ shift('right'); });
+    exitZerosBtn.addEventListener('click',function(){
+      exitZeros=!exitZeros;
+      exitZerosBtn.textContent = "Gestion de la sortie";
+      applyZeroMode(); ensureExitZeros();
+    });
+
+    // Init
+    updateStatus();
+    inputs[0].focus();
+  </script>
+</body>
+</html>
