--- a/outils/index.html
+++ b/outils/index.html
@@ -14,7 +14,7 @@
   <div class="card center">
     <h3>Glisse‑nombre</h3>
     <p class="small">× / ÷ 10 · 100 · 1000</p>
-    <p><a class="btn-chip" href="glisse-nombre-portable.html">Ouvrir</a></p>
+    <p><a class="btn-chip" href="glisse-nombre.html">Ouvrir</a></p>
   </div>
   <div class="card center">
     <h3>Boulier</h3>
