--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <section class="card center">
     <h1 class="big">Bienvenue 👋</h1>
     <p>Outils interactifs et documents pour tes entraînements à la maison.</p>
+    <p class="small">Sur téléphone passe en paysage.</p>
   </section>
   <aside class="card" style="display:flex;align-items:center;justify-content:center">
     <a class="btn-chip" href="outils/">🔧&nbsp;&nbsp;Outils</a>
